# celeri

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alternative-installation.md  auto-triangulation.md  block_closure_example.py  celer.ipynb  celeri-meridian-demonstration.ipynb  celeri.ipynb  celeri.py  celeri_block_model_steps.ipynb  celeri_closure.py  celeri_vis.ipynb  environment.yml  estimating_tde_slip.ipynb  fault_slip_sense.ipynb  maintenance-notes.md  ordered_mesh_edges.py  pixi.toml  pyproject.toml  read_patches.ipynb  runtime-performance-plan.md  setup.cfg  setup.py  triangulation_schematic.py
.claude/: settings.local.json
.github/: dependabot.yml
.github/scripts/: lockfile-alert-check.sh  lockfile-alert-comment.js  pre-commit-janitor-commit.sh
.github/workflows/: check-lockfile.yaml  lockfile-alert.yaml  pat-expiry-alert.yaml  pre-commit-janitor.yaml  release.yaml  test-legacy-mcmc.yml  test.yml  update-pixi-lockfile.yaml
celeri/: __init__.py  _arviz_compat.py  celeri.py  celeri_closure.py  celeri_util.py  celeri_vis.py  censored_distribution_stability_hotfix.py  cli.py  config.py  constants.py  emed0026_segment.csv  filter_mcmc_chains_by_waic.py  get_mesh_edge_elements.py  hmat_tree.py  hmatrix.py  mcmc_watchdog.py  mean_block_velocity.py  mesh.py  mesh_ribbon.py  mesh_ribbon_hacky.py  mesh_test.geo  mesh_test.msh  model.py  operators.py  optimize.py  optimize_sqp.py  output.py  plot.py  plot_informed_meshes.py  plot_mesh.py  solve.py  solve_mcmc.py  spatial.py  version.py
celeri/okada/: auto-triangulation.md  cutde_okada.py
celeri/scripts/: apply_mesh_params.py  blockmesh.py  celeri_check_fix_segments.py  celeri_check_segment_block_integrity.py  celeri_forward.py  celeri_gmt.py  celeri_remove_vels_segment_collocated.py  celeri_report.py  celeri_report_segment_priors.py  celeri_reweight_stations.py  celeri_solve.py  create_bel_mesh.py  create_grid_station.py  create_mesh_params_template.py  msh2stl.py  pixi_global_install_shim_hack.py  segment_meshing_function.py  segmesh.py  segmesh_singleflag.py  snap_segments.py  stl2msh.py
convert/: add_slip_rate_constraint_cols_to_segment_csv_file.py  block2csv.m  command2json.m  convert_blocks_to_celeri.m  mat2msh.m  segment2csv.m  stadata2csv.m
data/: test_mesh_param.json
data/anatolia/: anatolia_segment.csv
data/block/: anatolia_0035_block.csv  (+3 more)
meshing/: emed0026_segment.csv  mesh_ribbon.py  mesh_ribbon_hacky.py  mesh_test.geo  mesh_test.msh  mesh_test_2192.msh  mesh_test_550.msh  msh_to_stl.ipynb  naf_sorted_top_coordinates.csv
notebooks/: ben_hmatrix_tests.ipynb  benchmark_convex_solvers.ipynb  celeri.ipynb  celeri_anatolia_vis.ipynb  celeri_check_input.ipynb  celeri_check_segment_block_integrity.py  celeri_dense.ipynb  celeri_dense_new.ipynb  celeri_direct_dense.ipynb  celeri_direct_dense_japan.ipynb  celeri_direct_dense_japan_debug.ipynb  celeri_direct_dense_japan_dev.ipynb  celeri_direct_dense_western_north_america.ipynb  celeri_direct_dense_western_north_america_block_only.ipynb  celeri_direct_hmatrix_japan.ipynb  celeri_direct_hmatrix_test.ipynb  celeri_direct_hmatrix_test_clean01.ipynb  celeri_direct_hmatrix_test_clean02.ipynb  celeri_direct_hmatrix_test_clean03.ipynb  celeri_direct_hmatrix_test_clean04.ipynb  celeri_direct_hmatrix_test_clean05.ipynb  celeri_direct_hmatrix_test_clean06.ipynb  celeri_direct_hmatrix_test_clean06_revereted.ipynb  celeri_direct_hmatrix_test_clean07.ipynb  celeri_direct_hmatrix_test_clean08.ipynb  celeri_direct_hmatrix_test_clean09.ipynb  celeri_direct_hmatrix_test_clean10.ipynb  celeri_direct_hmatrix_test_clean11.ipynb  celeri_gmt.py  celeri_hmat_dev.ipynb  celeri_hmatrix.ipynb  celeri_hmatrix02.ipynb  celeri_hmatrix03.ipynb  celeri_hmatrix_only.ipynb  celeri_hmatrix_western_north_america.ipynb  celeri_japan_dense.ipynb  celeri_japan_qp.ipynb  celeri_japan_qp_cmi.ipynb  celeri_japan_qp_cmi_coupling.py  celeri_japan_qp_cmi_coupling_12.ipynb  (+73 more)
scripts/: bench_eigen_memory.py  bench_okada_memory.py  celeri_gmt.py  celeri_report.py  celeri_solve.py  segment_meshing.py  segment_meshing_function.py  snap_segments.py  verify_wheel.py
tests/: conftest.py  context.py  global_closure_test_data.npy  global_closure_test_data_with_snap_segments.npy  test_arviz_compat.py  test_basic.py  test_batched_eigen.py  test_cache.py  test_celeri_util.py  test_cli.py  test_closure.py  test_closure_command.json  test_closure_config.json  test_closure_mesh_parameters.json  test_closure_segment.csv  test_filter_mcmc_chains_by_waic.py  test_japan_arrays.npz  test_japan_block.csv  test_japan_command.json  test_japan_config.json  test_japan_dense.py  test_japan_mesh_parameters.json  test_japan_nankai.msh  test_japan_segment.csv  test_legacy_env_frozen.py  test_los_operators.py  test_mcmc_watchdog.py  test_okada_equals_cutde.py  test_optimize.py  test_optimize_sqp.py  test_output_files.py  test_process_args.py  test_serialize.py  test_snap_segments.py  test_solve_dense.py  test_solve_mcmc.py  test_streamed_okada.py  test_western_north_america_arrays.npz  test_western_north_america_command.json  test_western_north_america_config.json  (+3 more)
utilities/: celeri_eigenmodes.ipynb  celeri_eigenmodes_boundary_condition_experiments.ipynb  celeri_eigenmodes_slip.ipynb  celeri_eigenmodes_slip_01.ipynb  celeri_eigenmodes_slip_02.ipynb  celeri_eigenmodes_slip_03.ipynb  celeri_eigenmodes_slip_04.ipynb  celeri_eigenmodes_slip_05.ipynb  celeri_eigenmodes_slip_06.ipynb  celeri_eigenmodes_slip_07.ipynb  celeri_eigenmodes_slip_08.ipynb  celeri_eigenmodes_slip_09.ipynb  celeri_eigenmodes_slip_10.ipynb  celeri_eigenmodes_slip_11.ipynb  celeri_eigenmodes_slip_12.ipynb  celeri_eigenmodes_slip_13.ipynb  celeri_eigenmodes_slip_estimates.ipynb  celeri_patch_file_name_adjust.ipynb  celeri_synthetic_slip_distributions_02.ipynb  celeri_synthetic_slip_distributions_03.ipynb  celeri_synthetic_slip_distributions_contour.ipynb  cm_xml_to_matplotlib.py  old_eigenvector_notes.ipynb  w_ymiddle1.xml
vis/: model_meshes.csv  model_segment.csv  model_station.csv  reference_gmt_scripts.py  reference_pygmt.py
(+224 files in other folders)
